# service/api/api-handler.go
@@ -7,7 +7,7 @@ import (
 // Handler returns an instance of httprouter.Router that handle APIs registered here
 func (rt *_router) Handler() http.Handler {
 	// Register routes
-	
+	rt.router.POST("/session", rt.wrap(rt.doLogin))
 
 	// Special routes
 	rt.router.GET("/liveness", rt.liveness)
